added getuser 1.0